Fix color contrast and format css file

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Public+Sans:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Public+Sans:wght@400;500;700&display=swap");
 
 @import "tailwindcss/base";
 
 body {
   @apply .text-gray-900;
 
-  font-family: 'Public Sans', sans-serif;
+  font-family: "Public Sans", sans-serif;
 }
 
 code {
-  font-family: 'Fira Code', monospace;
+  font-family: "Fira Code", monospace;
 }
 
 @import "tailwindcss/components";
@@ -38,7 +38,7 @@ h3 > .anchor.before {
 
 .brand:hover > span::before {
   animation: typing 0.2s linear;
-  content: " = 🌮"
+  content: " = 🌮";
 }
 
 .brand:hover > span::after {
@@ -110,7 +110,12 @@ h3 > .anchor.before {
   @apply .mb-4;
 }
 
-.markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 {
+.markdown h1,
+.markdown h2,
+.markdown h3,
+.markdown h4,
+.markdown h5,
+.markdown h6 {
   @apply .font-bold;
 }
 
@@ -143,7 +148,7 @@ h3 > .anchor.before {
 }
 
 .markdown a {
-  @apply .text-blue-600;
+  @apply .text-blue-700;
 }
 
 .markdown a:hover {
